@@ -24,6 +24,7 @@ public:
     virtual void AfterChildWaitLoop(void *data);
 
     virtual bool DoMessageFromThreadWait();
+    virtual WXDWORD WaitForThread(WXHANDLE hThread);
 };
 
 #if wxUSE_GUI
@@ -37,6 +38,7 @@ public:
 
     virtual bool DoMessageFromThreadWait();
     virtual wxPortId GetToolkitVersion(int *majVer, int *minVer) const;
+    virtual WXDWORD WaitForThread(WXHANDLE hThread);
 };
 
 #endif // wxUSE_GUI
